# hello-triangle

./: .gitignore  CMakeLists.txt  Makefile  README.md
res/shaders/: Basic.shader
src/: main.cpp
